<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/extra_large"
                android:background="@color/grey"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/size_small_24"
                android:paddingTop="@dimen/size_small_24">

                <LinearLayout
                    android:layout_weight="1"
                    style="@style/text_container">

                    <TextView
                        style="@style/text.big"
                        android:text="@string/rate_value_text"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/rating_text"/>
                </LinearLayout>

                <View
                    style="@style/vertical_view"/>

                <LinearLayout
                    android:layout_weight="2"
                    style="@style/text_container">

                    <TextView
                        style="@style/text.big"
                        android:text="@string/code_strings_value_text"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/code_strings_text"/>
                </LinearLayout>

                <View
                    style="@style/vertical_view"/>

                <LinearLayout
                    android:layout_weight="1"
                    style="@style/text_container">

                    <TextView
                        style="@style/text.big"
                        android:text="@string/project_value_text"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/project_text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large_56dp"
                android:layout_marginBottom="@dimen/size_smaller_8"
                android:layout_marginTop="@dimen/size_smaller_8"
                android:orientation="horizontal"
                >

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_phone_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large_56dp"
                    android:layout_marginLeft="@dimen/spacing_medium_32dp"
                    android:layout_marginRight="@dimen/spacing_normal_16dp"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text.boxex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Мобильный"
                            android:inputType="phone"
                            android:text="@string/phone_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/size_large_72"
                android:background="@color/grey_light">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large_56dp"
                android:layout_marginBottom="@dimen/size_smaller_8"
                android:layout_marginTop="@dimen/size_smaller_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large_56dp"
                    android:layout_marginLeft="@dimen/spacing_medium_32dp"
                    android:layout_marginRight="@dimen/spacing_normal_16dp"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text.boxex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="E-mail"
                            android:text="@string/email_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/size_large_72"
                android:background="@color/grey_light">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large_56dp"
                android:layout_marginBottom="@dimen/size_smaller_8"
                android:layout_marginTop="@dimen/size_smaller_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_logo"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large_56dp"

                    android:layout_marginLeft="@dimen/spacing_medium_32dp"
                    android:layout_marginRight="@dimen/spacing_normal_16dp"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text.boxex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="Профиль в VK"
                            android:text="@string/vk_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/eye"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/size_large_72"
                android:background="@color/grey_light">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large_56dp"
                android:layout_marginBottom="@dimen/size_smaller_8"
                android:layout_marginTop="@dimen/size_smaller_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_git"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large_56dp"

                    android:layout_marginLeft="@dimen/spacing_medium_32dp"
                    android:layout_marginRight="@dimen/spacing_normal_16dp"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text.boxex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="Репозиторий"
                            android:text="@string/git_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/eye"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size"
                android:layout_marginLeft="@dimen/size_large_72"
                android:background="@color/grey_light">

            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_large_56dp"
                android:layout_marginBottom="@dimen/size_smaller_8"
                android:layout_marginTop="@dimen/size_smaller_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large_56dp"
                    android:layout_marginLeft="@dimen/spacing_medium_32dp"
                    android:layout_marginRight="@dimen/spacing_normal_16dp"
                    android:layout_weight="1"
                    android:gravity="bottom">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/text.boxex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="О себе"
                            android:inputType="textMultiLine"
                            android:text="@string/self_text"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>


